setmy-info-rocky-java-ci/src/main/k8s/dev/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: jenkins-service
    namespace: jenkins-dev
spec:
    selector:
        app: jenkins
    ports:
        -   name: http
            protocol: TCP
            port: 7070
            targetPort: http
            nodePort: 30000
    type: NodePort
